--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:background="@android:color/transparent"
                 android:layout_gravity="left"
+                android:tint="@color/availableIcon"
                 android:layout_height="match_parent" />
 
             <TextView
@@ -45,6 +46,7 @@
                 android:background="@android:color/transparent"
                 android:layout_gravity="right"
                 android:paddingRight="16dp"
+                android:tint="@color/availableIcon"
                 android:layout_height="match_parent" />
 
         </android.support.v7.widget.Toolbar>
