--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorPrimary"
     android:weightSum="2">
 
     <LinearLayout
@@ -85,7 +86,7 @@
                 android:layout_height="70dp"
                 android:layout_weight="3"
                 android:src="@drawable/ic_pause_circle_filled_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@color/colorAccent"/>
 
             <ImageView
                 android:id="@+id/forwardBtn"
