--- a/app/src/main/res/layout/preference_layout.xml
+++ b/app/src/main/res/layout/preference_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/displayPrefs"
+        android:layout_weight="4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ListView
@@ -12,18 +13,19 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1" />
-    </FrameLayout>
+    </LinearLayout>
+
     <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/linearLayout1"
-        android:layout_gravity="right"
+        android:layout_weight="1"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <Button
             android:layout_width="wrap_content"
             android:id="@+id/close"
             android:layout_gravity="center"
+            android:background="@android:color/transparent"
             android:layout_height="wrap_content"
             android:text="OK" />
     </LinearLayout>
