--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -24,6 +24,11 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/playerTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"/>
 
         <SeekBar
             android:id="@+id/seekBar"
