--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,10 @@
     <color name="colorAccent">#AA00FF</color>
     <color name="black">#000000</color>
     <color name="availableIcon">#FFFFFF</color>
-    <color name="unAvailableIcon">#EEEEEE</color>
+    <color name="unAvailableIcon">#757575</color>
     <color name="primaryText">#FFFFFF</color>
     <color name="secondaryText">#060001</color>
+
 
 
 </resources>
