--- a/app/src/main/res/layout/small_player.xml
+++ b/app/src/main/res/layout/small_player.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="64dp"
     android:background="@android:color/background_light"
     android:gravity="center"
     android:orientation="horizontal"
@@ -42,7 +42,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/smallPlayerText1"
+                    android:id="@+id/smallPlayerText2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -51,13 +51,15 @@
                     android:background="@color/colorPrimary"/>
 
                 <TextView
-                    android:id="@+id/smallPlayerText2"
+                    android:id="@+id/smallPlayerText1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:textSize="12dp"
                     android:textColor="@color/primaryText"
                     android:background="@color/colorPrimary"/>
+
             </LinearLayout>
 
             <ImageView
