--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,10 @@
 <resources>
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#AA00FF</color>
+    <color name="colorAccent">#CDDC39</color>
     <color name="black">#000000</color>
     <color name="availableIcon">#FFFFFF</color>
     <color name="unAvailableIcon">#757575</color>
     <color name="primaryText">#FFFFFF</color>
     <color name="secondaryText">#060001</color>
-
-
-
 </resources>
