--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -62,55 +62,64 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:layout_gravity="center">
 
             <ImageView
-                android:id="@+id/sleepBtn"
+                android:id="@+id/previousBtn"
+                android:minWidth="50dp"
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="20dp"
                 android:layout_weight="2"
-                android:src="@drawable/ic_snooze_black_24dp"
+                android:src="@drawable/ic_skip_previous_black_24dp"
                 android:tint="@color/unAvailableIcon"/>
 
             <ImageView
                 android:id="@+id/replayBtn"
+                android:minWidth="50dp"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_weight="2"
                 android:src="@drawable/ic_replay_10_black_24dp"
                 android:tint="@color/availableIcon"/>
 
             <ImageView
                 android:id="@+id/playBtn"
+                android:minWidth="70dp"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:layout_weight="3"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:src="@drawable/ic_pause_circle_filled_black_24dp"
                 android:tint="@color/colorAccent"/>
 
             <ImageView
                 android:id="@+id/forwardBtn"
+                android:minWidth="50dp"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="2"
                 android:src="@drawable/ic_forward_10_black_24dp"
                 android:tint="@color/availableIcon"/>
-
             <ImageView
-                android:id="@+id/speedBtn"
+                android:id="@+id/nextBtn"
+                android:minWidth="50dp"
+                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="20dp"
                 android:layout_weight="2"
-                android:src="@drawable/ic_rowing_black_24dp"
+                android:src="@drawable/ic_skip_next_black_24dp"
                 android:tint="@color/unAvailableIcon"/>
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -119,21 +128,9 @@
             android:layout_gravity="center"
             android:layout_weight="3">
 
-            <ImageView
-                android:id="@+id/previousBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_skip_previous_black_24dp"
-                android:tint="@color/unAvailableIcon"/>
 
-            <ImageView
-                android:id="@+id/nextBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_skip_next_black_24dp"
-                android:tint="@color/unAvailableIcon"/>
+
+
         </LinearLayout>
 
         <LinearLayout
