--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -153,7 +153,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_library_books_black_24dp"
-                android:tint="@color/unAvailableIcon"/>
+                android:tint="@color/availableIcon"/>
 
             <ImageView
                 android:id="@+id/favoriteBtn"
@@ -161,7 +161,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_favorite_black_24dp"
-                android:tint="@color/unAvailableIcon"/>
+                android:tint="@color/availableIcon"/>
 
             <ImageView
                 android:id="@+id/shareBtn"
@@ -169,7 +169,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_share_black_24dp"
-                android:tint="@color/unAvailableIcon"/>
+                android:tint="@color/availableIcon"/>
         </LinearLayout>
 v
     </LinearLayout>
