--- a/app/src/main/res/layout/single_playlist_layout.xml
+++ b/app/src/main/res/layout/single_playlist_layout.xml
@@ -14,19 +14,20 @@
             android:textAlignment="center"
             android:layout_gravity="center"
             android:padding="16dp"
+            android:textSize="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/headerBox"
+        android:orientation="vertical"
         android:background="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/collectionImage"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -40,7 +41,11 @@
 
     </LinearLayout>
 
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:background="@color/black"
+        android:layout_height="20dp">
+    </FrameLayout>
 
     <ExpandableListView
         android:id="@+id/expandable_listview"
