next on autoplaylist working

--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -50,6 +50,6 @@
         android:layout_width="0dp"
         android:layout_weight="15"
         android:layout_height="match_parent"
-        android:tint="@color/unAvailableIcon"
+        android:tint="@color/availableIcon"
         android:background="@color/colorPrimary"/>
     </LinearLayout>
