--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -117,7 +117,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="2"
                 android:src="@drawable/ic_skip_next_black_24dp"
-                android:tint="@color/unAvailableIcon"/>
+                android:tint="@color/availableIcon"/>
 
 
         </LinearLayout>
