--- a/app/src/main/res/layout/small_player.xml
+++ b/app/src/main/res/layout/small_player.xml
@@ -75,7 +75,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="15"
-                android:tint="@color/unAvailableIcon"
+                android:tint="@color/availableIcon"
                 android:background="@color/colorPrimary"/>
         </LinearLayout>
     </LinearLayout>
