--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal"
     android:weightSum="100"
     android:background="@color/colorPrimary"
     >
 
-    <ImageView
-        android:id="@+id/notifiationImage"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="15"
-        android:background="@color/colorPrimary"/>
 <LinearLayout
+    android:paddingLeft="5dp"
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_weight="55">
+    android:layout_weight="80">
     <TextView
         android:id="@+id/notifiationText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:textColor="@color/primaryText"
         android:background="@color/colorPrimary"/>
     <TextView
@@ -34,21 +29,23 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_weight="1"
-        android:textColor="@color/primaryText"
-        android:background="@color/colorPrimary"/>
+        android:textSize="12dp"
+        android:textColor="@color/unAvailableIcon"
+        android:paddingBottom="5dp"
+        />
 </LinearLayout>
 
     <ImageView
         android:id="@+id/notificationPlayBtn"
         android:layout_width="0dp"
-        android:layout_weight="15"
+        android:layout_weight="10"
         android:layout_height="match_parent"
         android:tint="@color/colorAccent"
         android:background="@color/colorPrimary"/>
     <ImageView
         android:id="@+id/notificationSkipBtn"
         android:layout_width="0dp"
-        android:layout_weight="15"
+        android:layout_weight="10"
         android:layout_height="match_parent"
         android:tint="@color/availableIcon"
         android:background="@color/colorPrimary"/>
