--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.elisarajaniemi.podcastapp.MainActivity">
 
-    <include layout="@layout/content_main" />
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +26,9 @@
                 android:background="@android:color/transparent"
                 android:layout_gravity="left"
                 android:tint="@color/availableIcon"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"/>
 
             <TextView
                 android:id="@+id/title"
@@ -37,7 +37,11 @@
                 android:textSize="25dp"
                 android:clickable="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"/>
 
             <ImageButton
                 android:id="@+id/searchBtn"
@@ -46,11 +50,14 @@
                 android:background="@android:color/transparent"
                 android:layout_gravity="right"
                 android:paddingRight="16dp"
+                android:paddingLeft="16dp"
                 android:tint="@color/availableIcon"
                 android:layout_height="match_parent" />
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_main" />
 
 </android.support.design.widget.CoordinatorLayout>
