--- a/app/src/main/res/layout/expandablelistview_item.xml
+++ b/app/src/main/res/layout/expandablelistview_item.xml
@@ -3,7 +3,7 @@
     android:descendantFocusability="blocksDescendants"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    android:padding="10dp"
+
     android:weightSum="100"
     android:background="@color/colorPrimary"
     android:layout_height="72dp">
@@ -16,6 +16,7 @@
         <ImageButton
             android:id="@+id/episodeIcon"
             android:paddingRight="16dp"
+            android:padding="10dp"
             android:layout_weight="20"
             android:src="@drawable/ic_play_arrow_black_50dp"
             android:tint="@color/colorAccent"
@@ -60,7 +61,9 @@
             android:background="@android:color/transparent"
             android:src="@drawable/ic_more_vert_black_24dp"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"/>
     </LinearLayout>
 
 
