--- a/app/src/main/res/layout/frontpage_layout.xml
+++ b/app/src/main/res/layout/frontpage_layout.xml
@@ -23,7 +23,8 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:padding="15dp"/>
     </LinearLayout>
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
