--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -86,7 +86,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_weight="2"
                 android:src="@drawable/ic_replay_10_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
 
             <ImageView
                 android:id="@+id/playBtn"
@@ -108,7 +108,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_weight="2"
                 android:src="@drawable/ic_forward_10_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
             <ImageView
                 android:id="@+id/nextBtn"
                 android:minWidth="50dp"
@@ -117,7 +117,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="2"
                 android:src="@drawable/ic_skip_next_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
 
 
         </LinearLayout>
@@ -153,7 +153,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_library_books_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
 
             <ImageView
                 android:id="@+id/favoriteBtn"
@@ -161,7 +161,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_favorite_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
 
             <ImageView
                 android:id="@+id/shareBtn"
