--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -75,7 +75,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="2"
                 android:src="@drawable/ic_skip_previous_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
 
             <ImageView
                 android:id="@+id/replayBtn"
@@ -128,9 +128,6 @@
             android:layout_gravity="center"
             android:layout_weight="3">
 
-
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -145,7 +142,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_library_books_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
 
             <ImageView
                 android:id="@+id/playlistBtn"
@@ -153,7 +150,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_playlist_add_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
 
             <ImageView
                 android:id="@+id/favoriteBtn"
@@ -169,7 +166,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_share_black_24dp"
-                android:tint="@color/availableIcon"/>
+                android:tint="@drawable/text_color"/>
         </LinearLayout>
 v
     </LinearLayout>
