--- a/app/src/main/res/layout/small_player.xml
+++ b/app/src/main/res/layout/small_player.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:background="@android:color/background_light"
+    android:layout_height="75dp"
+
     android:gravity="center"
     android:orientation="horizontal"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:background="@color/colorPrimaryDark">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -20,7 +21,8 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_marginBottom="-8dp"
             android:layout_marginTop="-6dp"
-             />
+            android:progressBackgroundTint="@color/unAvailableIcon"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,32 +35,35 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="22"
-                android:background="@color/colorPrimary"/>
+                />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="48"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <TextView
                     android:id="@+id/smallPlayerText2"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:padding="3dp"
+
                     android:gravity="center"
                     android:textColor="@color/primaryText"
-                    android:background="@color/colorPrimary"/>
+                    />
 
                 <TextView
                     android:id="@+id/smallPlayerText1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:padding="3dp"
+
                     android:gravity="center"
                     android:textSize="12dp"
                     android:textColor="@color/primaryText"
-                    android:background="@color/colorPrimary"/>
+                    />
 
             </LinearLayout>
 
@@ -68,7 +73,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="10"
                 android:tint="@color/colorAccent"
-                android:background="@color/colorPrimary"/>
+                />
 
             <ImageView
                 android:id="@+id/smallPlayerSkipBtn"
@@ -76,7 +81,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="10"
                 android:tint="@color/availableIcon"
-                android:background="@color/colorPrimary"/>
+                />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
