--- a/app/src/main/res/layout/frontpage_layout.xml
+++ b/app/src/main/res/layout/frontpage_layout.xml
@@ -8,15 +8,20 @@
         android:orientation="horizontal"
         android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingRight="15dp">
 
         <Button
             android:id="@+id/categoryBtn"
-            android:layout_weight="4"
+            android:layout_weight="2"
             android:text="categories"
             android:background="@android:color/transparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
         <Spinner
             android:id="@+id/spinner"
             android:textAlignment="center"
@@ -24,7 +29,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="15dp"/>
+            />
     </LinearLayout>
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
