--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -6,7 +6,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/avaruus"/>
+            android:src="@drawable/avaruus2"/>
     </item>
 
 </layer-list>
