--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -75,7 +75,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="2"
                 android:src="@drawable/ic_skip_previous_black_24dp"
-                android:tint="@drawable/text_color"/>
+                android:tint="@color/unAvailableIcon"/>
 
             <ImageView
                 android:id="@+id/replayBtn"
